--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
                 "Chú cho bạn luôn xinh đẹp, mạnh khoẻ và hạnh phúc",
                 "Luôn được yêu thương, che chở ",
                 "Và....",
-                "Tìm được người mình cần tìm"
+                "Nhanh chóng tìm được người mình cần tìm nha",
+                "            ||",
+                "            ||",
+                "        Click vào cái bông  "
             );
             var iSpeed = 100; // time delay of print out
             var iIndex = 0; // start printing array at this posision
